added: pagination, query parameter, update tests and documentation
