# controllers/controller.go
@@ -1,7 +1,9 @@
 package controllers
 
 import (
+	"fmt"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/lucasjct/database"
@@ -12,24 +14,50 @@ import (
 //
 //	@Summary	List all artist
 //	@Success	200
-//	@Router		/artist [get]
+//	@Router		/artist  [get]
 //	@Tags		Artists
 func ShowAllArtist(c *gin.Context) {
-	var artist []models.Artist
-	database.DB.Find(&artist)
-	c.JSON(200, artist)
 
+	// define query parameter
+	pageStr := c.DefaultQuery("page", "1")
+	page, err := strconv.Atoi(pageStr)
+
+	if err != nil || page < 1 {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": "Invalid page parameter",
+		})
+		return
+	}
+
+	const pageSize = 5
+	offset := (page - 1) * pageSize
+	var totalRows int64
+	var artist []models.Artist
+
+	// data limit per page
+	database.DB.Limit(5).Offset(offset).Find(&artist)
+
+	// count total page
+	database.DB.Model(&models.Artist{}).Count(&totalRows)
+
+	totalPages := (totalRows + int64(pageSize) - 1) / int64(pageSize)
+	// show total page on headers
+	c.Header("Total-Pages", fmt.Sprintf("%d", totalPages))
+	// show page on headers
+	c.Header("Current-Page", pageStr)
+	c.JSON(http.StatusOK, artist)
 }
 
 // Create a new artist
 //
-// @Summary      Create a new artist
-// @Tags         Artists
-// @Accept       json
-// @Produce      json
-// @Param        artist  body      models.Artist  true  "Artist details"
-// @Success      201     {object}  models.Artist  "Artist Created Successfully"
-// @Router       /artist [post]
+//	@Summary	Create a new artist
+//	@Tags		Artists
+//	@Accept		json
+//	@Produce	json
+//	@Param		artist	body		models.Artist	true	"Artist details"
+//	@Param		page	query		int				false	"Page number"	default(1)	example(1)
+//	@Success	201		{object}	models.Artist	"Artist Created Successfully"
+//	@Router		/artist [post]
 func CreateNewArtist(c *gin.Context) {
 	var artist models.Artist
 	if err := c.ShouldBindJSON(&artist); err != nil {
@@ -50,15 +78,24 @@ func CreateNewArtist(c *gin.Context) {
 // search by specifc ID related to some artist
 //
 //	@Summary	List an artist by ID
-//	@Param		id	path	integer	true	"Artist ID"
+//	@Param		id	query	integer	true	"ID of the artist"	example("25")
 //	@Tags		Artists
 //	@Success	200
-//	@Router		/artist/{id}    [get]
+//	@Router		/artist/specific    [get]
 func SearchArtistById(c *gin.Context) {
-	var artist models.Artist
-	id := c.Params.ByName("id")
-	database.DB.First(&artist, id)
 
+	id := c.DefaultQuery("id", "")
+
+	if id == "" {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": "ID query parameter is required",
+		})
+		return
+
+	}
+	var artist models.Artist
+
+	database.DB.First(&artist, id)
 	if artist.ID == 0 {
 		c.JSON(http.StatusNotFound, gin.H{
 			"Not Found": "artist not found"})
@@ -72,50 +109,63 @@ func SearchArtistById(c *gin.Context) {
 // search artist by name
 //
 //	@Summary	Search artist by name
-//	@Param		name	path		string			true	"Artist Name"
+//	@Param		name	query	string	true	"Name of the artist"	example("Emicida")
 //	@Success	200
 //	@Tags		Artists
-//	@Router		/artist/{name}   [get]
+//	@Router		/artist/name    [get]
 func SearchArtistByName(c *gin.Context) {
 	var artist models.Artist
-	name := c.Param("name")
-	database.DB.Where(&models.Artist{Name: name}).First(&artist)
+	name := c.DefaultQuery("name", "")
 
-	if artist.ID == 0 {
+	if name == "" {
 		c.JSON(http.StatusNotFound, gin.H{
-			"Not Found": "name not found"})
-		return
+			"Not Found": "name not found",
+		})
 	}
+
+	database.DB.Where(&models.Artist{Name: name}).First(&artist)
 	c.JSON(http.StatusOK, artist)
 }
 
 // delete a specific artist
 
-// @Param		id	path	integer	true	"Artist ID"
+// @Param		id	query	integer	true	"ID of the artist"	example("25")
 // @Summary	Delete a specific artist
 // @Tags		Artists
 // @Success	200
-// @Router		/artist/{id}   [delete]
+// @Router		/artist   [delete]
 func DeleteArtist(c *gin.Context) {
 	var artist models.Artist
-	id := c.Params.ByName("id")
+	id := c.DefaultQuery("id", "")
+	if id == "" {
+		c.JSON(http.StatusNotFound, gin.H{
+			"Not Found": "id not found",
+		})
+	}
+
 	database.DB.Delete(&artist, id)
 	c.JSON(http.StatusOK, gin.H{"Delete": "The artist has been deleted."})
 }
 
 // Update a specific artist
 //
-// @Summary      Update a specific artist
-// @Tags         Artists
-// @Accept       json
-// @Produce      json
-// @Param        id      path      integer           true  "Artist ID"
-// @Param	     artist	 body	   models.Artist	 true	"Artist details"
-// @Success      200     {object}  models.Artist     "Artist updated successfully"
-// @Router       /artist/{id} [patch]
+//	@Summary	Update a specific artist
+//	@Tags		Artists
+//	@Accept		json
+//	@Produce	json
+//	@Param		id		query		integer			true	"ID of the artist"	example("25")
+//	@Param		artist	body		models.Artist	true	"Artist details"
+//	@Success	200		{object}	models.Artist	"Artist updated successfully"
+//	@Router		/artist   [patch]
 func UpdateArtist(c *gin.Context) {
 	var artist models.Artist
-	id := c.Params.ByName("id")
+	id := c.DefaultQuery("id", "")
+
+	if id == "" {
+		c.JSON(http.StatusNotFound, gin.H{
+			"Not Found": "id not found",
+		})
+	}
 	database.DB.First(&artist, id)
 
 	if err := c.ShouldBindJSON(&artist); err != nil {
